# civilization-spatial-mapper

./: .gitignore  CMakeLists.txt  Civilization_Spatial_Mapper_Guide.docx  Makefile  README.md  civilization_mapper.cpp  civilization_mapper_frontend.html  civilizations.csv  civilizations_data.json  errors.txt  in.txt  main.cpp  run_app.bat  server.py  test_stress.cpp
analytics/: benchmark.cpp  benchmark.h  performance.cpp  spatial_scaling_test.cpp  time_filter.cpp  time_filter.h  validation_test.cpp
core/: kd_tree.cpp  kd_tree.h  r_tree.cpp  r_tree.h
core/rtree/: rtree.cpp  rtree.h
data/: csv_loader.cpp  csv_loader.h  final_dataset.csv
utils/: logger.cpp  logger.h
